syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "BS.Transactions.Service";

package accounts_transactions;

service AccountsTransactions {
	rpc AddAccountTransaction (AddAccountTransactionRequest) returns (AddAccountTransactionResponse);
	rpc GetAccountTransactions (GetAccountTransactionsRequest) returns (GetAccountTransactionsResponse);
}

message AddAccountTransactionRequest {
	int32 userId = 1;
	int32 accountId = 2;
	double value = 3;
}

message AddAccountTransactionResponse {
	int32 userId = 1;
	int64 id = 2;
	int32 accountId = 3;
	double credit = 4;
	double debit = 5;
	int32 createdByUserId = 6;
	google.protobuf.Timestamp createdDate = 7;
	int32 updatedByUserId = 8;
	google.protobuf.Timestamp updatedDate = 9;
}

message GetAccountTransactionsRequest {
	int32 userId = 1;
	int32 accountId = 2;
}

message GetAccountTransactionsResponse {
	int32 userId = 1;
	repeated GetAccountTransactionsResponseEntry transactions = 2;

	message GetAccountTransactionsResponseEntry {
		int64 id = 1;
		int32 accountId = 2;
		double credit = 3;
		double debit = 4;
		int32 createdByUserId = 5;
		google.protobuf.Timestamp createdDate = 6;
		int32 updatedByUserId = 7;
		google.protobuf.Timestamp updatedDate = 8;
	}

}
